--- a/hivemind/tavern/hive_api_patterns/get_info/test.tavern.yaml
+++ b/hivemind/tavern/hive_api_patterns/get_info/test.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind hive.get_info patterns test test
+  test_name: Hivemind hive.get_info patterns test
 
   marks:
-    - patterntest # incorrect version and git revision version
+    - patterntest
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_info
+    - name: hive.get_info
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -26,4 +26,4 @@
           extra_kwargs:
             method: "test"
             directory: "hive_api_patterns/get_info"
-
+            ignore_tags: ["hivemind_git_rev"]
