--- a/hivemind/tavern_full_sync/bridge_api_patterns/account_notifications/chekohler_min_score_75.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/account_notifications/chekohler_min_score_75.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort replies jlkreiss
+  test_name: Hivemind bridge_api.account_notifications min score 75
 
   marks:
     - fullsynctest
 
   includes:
-    - !include ../../../common.yaml
+    - !include ../../common.yaml
 
   stages:
-    - name: get_account_posts sort replies jlkreiss
+    - name: account_notifications min score 75
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.get_account_posts"
-          params: {"sort":"replies", "account":"jlkreiss"}
+          method: "bridge.account_notifications"
+          params: {"account": "chekohler", "min_score": 75}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "jlkreiss"
-            directory: "bridge_api_patterns/get_account_posts/replies"
+            method: "chekohler_min_score_75"
+            directory: "bridge_api_patterns/account_notifications"
