--- a/hivemind/tavern_full_sync/bridge_api_patterns/does_user_follow_any_lists/chekohler.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/does_user_follow_any_lists/chekohler.tavern.yaml
@@ -1,14 +1,15 @@
 ---
-  test_name: Hivemind condenser_api.get_blog most posts
+  test_name: Hivemind bridge_api.does_user_follow_any_lists
 
   marks:
     - fullsynctest
+    - xfail # to fix - SyntaxError: syntax error at or near "from" LINE 2: from hive_accounts join hive_follows on (hi...
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_blog most posts
+    - name: does_user_follow_any_lists
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,13 +18,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.get_blog"
-          params: ["steemitboard",0,0]
+          method: "bridge.does_user_follow_any_lists"
+          params: {"observer": "chekohler"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "most_blog_posts"
-            directory: "condenser_api_patterns/get_blog"
-
+            method: "chekohler"
+            directory: "bridge_api_patterns/does_user_follow_any_lists"
