--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/posts/my_muted.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/posts/my_muted.tavern.yaml
@@ -1,6 +1,6 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort replies jlkreiss
-
+  test_name: Hivemind bridge.get_account_posts my_muted
+  # should have in result blacklists: ["my_muted", "reputation-0"]
   marks:
     - fullsynctest
 
@@ -8,7 +8,7 @@
     - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts sort replies jlkreiss
+    - name: get_account_posts my_muted
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"sort":"replies", "account":"jlkreiss"}
+          params: {"sort":"posts","account":"earnest","observer":"nalesnik"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "jlkreiss"
-            directory: "bridge_api_patterns/get_account_posts/replies"
+            method: "my_muted"
+            directory: "bridge_api_patterns/get_account_posts/posts"
