--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_profile/all_metadata.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_profile/all_metadata.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort replies jlkreiss
-
+  test_name: Hivemind bridge_api.get_profile all metadata
+  # response should have all metadata fields filled
   marks:
     - fullsynctest
 
   includes:
-    - !include ../../../common.yaml
+    - !include ../../common.yaml
 
   stages:
-    - name: get_account_posts sort replies jlkreiss
+    - name: get_profile all metadata
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.get_account_posts"
-          params: {"sort":"replies", "account":"jlkreiss"}
+          method: "bridge.get_profile"
+          params: {"account":"nalesnik"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "jlkreiss"
-            directory: "bridge_api_patterns/get_account_posts/replies"
+            method: "all_metadata"
+            directory: "bridge_api_patterns/get_profile"
