--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_followers/most_ignored.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_followers/most_ignored.tavern.yaml
@@ -1,6 +1,6 @@
 ---
-  test_name: Hivemind condenser_api.get_blog most posts
-
+  test_name: Hivemind condenser_api.get_followers most ignored
+  # SELECT COUNT(id) as record_count, following FROM hive_follows WHERE state=2 GROUP BY(following) ORDER BY record_count DESC LIMIT 10;
   marks:
     - fullsynctest
 
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: get_blog most posts
+    - name: get_followers most ignored
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,13 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.get_blog"
-          params: ["steemitboard",0,0]
+          method: "condenser_api.get_followers"
+          params: ["cheetah",null,"ignore",1000]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "most_blog_posts"
-            directory: "condenser_api_patterns/get_blog"
-
+            method: "most_ignored"
+            directory: "condenser_api_patterns/get_followers"
