--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_following/most_blog_following.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_following/most_blog_following.tavern.yaml
@@ -1,6 +1,6 @@
 ---
-  test_name: Hivemind condenser_api.get_blog most posts
-
+  test_name: Hivemind condenser_api.get_following most blog following
+  #SELECT  COUNT(id) as record_count, follower FROM hive_follows WHERE state=1 GROUP BY(follower) ORDER BY record_count DESC LIMIT 3;;
   marks:
     - fullsynctest
 
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: get_blog most posts
+    - name: get_following most blog following
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,13 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.get_blog"
-          params: ["steemitboard",0,0]
+          method: "condenser_api.get_following"
+          params: ["marcusmalone",null,"blog",1000]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "most_blog_posts"
-            directory: "condenser_api_patterns/get_blog"
-
+            method: "most_blog_following"
+            directory: "condenser_api_patterns/get_following"
