--- a/hivemind/tavern_full_sync/full_sync/bridge_api_patterns/get_community/leo_finance.tavern.yaml
+++ b/hivemind/tavern_full_sync/full_sync/bridge_api_patterns/get_community/leo_finance.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort replies jlkreiss
+  test_name: Hivemind bridge_api.get_community leofinance
 
   marks:
     - fullsynctest
@@ -8,7 +8,7 @@
     - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts sort replies jlkreiss
+    - name: bridge_api.get_community leofinance
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.get_account_posts"
-          params: {"sort":"replies", "account":"jlkreiss"}
+          method: "bridge.get_community"
+          params: {"name":"hive-167922"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "jlkreiss"
-            directory: "bridge_api_patterns/get_account_posts/replies"
+            method: "leo_finance"
+            directory: "full_sync/bridge_api_patterns/get_community"
