--- a/hivemind/tavern_full_sync/hive_api/get_info.tavern.yaml
+++ b/hivemind/tavern_full_sync/hive_api/get_info.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort replies jlkreiss
+  test_name: Hivemind hive.get_info
 
   marks:
     - fullsynctest
 
   includes:
-    - !include ../../../common.yaml
+    - !include ../common.yaml
 
   stages:
-    - name: get_account_posts sort replies jlkreiss
+    - name: hive.get_info
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.get_account_posts"
-          params: {"sort":"replies", "account":"jlkreiss"}
+          method: "hive.get_info"
+          params: {}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "jlkreiss"
-            directory: "bridge_api_patterns/get_account_posts/replies"
+            method: "get_info"
+            directory: "hive_api"
