--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/mutes.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/mutes.tavern.yaml
@@ -1,6 +1,10 @@
 ---
   test_name: Hivemind bridge_api.get_ranked_posts created patterns test
 
+  # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
+  # For these communities some posts were created, therefore an original result is different from original pattern.
+  # For mock reblogs there were created some posts as well.
+  
   marks:
     - patterntest # see also tag_all.tavern.yaml; ignoreall ignores agartha (mock data)
 
