--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/my_gtg.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/my_gtg.tavern.yaml
@@ -4,6 +4,7 @@
   marks:
     - patterntest
   # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
+  # For mock reblogs there were created some posts( 'post_id' are changed ).
 
   includes:
     - !include ../../../common.yaml
