--- a/hivemind/tavern/condenser_api_patterns/get_state/blocktrades.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_state/blocktrades.tavern.yaml
@@ -7,6 +7,7 @@
   # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
   # For these communities some posts were created, therefore an original result is different from original pattern.
   # For these communities for account `blocktrades` were created 3 artificial comments. Permlinks: `crocodile01`, `crocodile02`, `crocodile03`
+  # For mock reblogs there were created some posts as well.
 
   includes:
     - !include ../../common.yaml
