--- a/hivemind/tavern/condenser_api_patterns/get_state/blog_abit.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_state/blog_abit.tavern.yaml
@@ -7,6 +7,7 @@
   # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
   # For these communities some posts were created, therefore an original result is different from original pattern.
   # For these communities for account `abit` were created 2 artificial comments. Permlinks: `anaconda01`, `anaconda02`
+  # For mock reblogs there were created some posts as well.
 
   includes:
     - !include ../../common.yaml
