--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/comments/animalcontrol.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/comments/animalcontrol.tavern.yaml
@@ -1,8 +1,8 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts comments animalcontrol
+  test_name: Hivemind bridge_api.get_account_posts comments animalcontrol slow call
 
   marks:
-    - fullsynctest
+    - fullsynctest # timeout
 
   includes:
     - !include ../../../common.yaml
