--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_followers/good-karma_unpopular.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_followers/good-karma_unpopular.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_followers good-karma unpopular
 
   marks:
-    - patterntest
+    - fullsynctest
 
   includes:
     - !include ../../common.yaml
