--- a/hivemind/tavern_full_sync/database_api_patterns/list_votes/holger80.tavern.yaml
+++ b/hivemind/tavern_full_sync/database_api_patterns/list_votes/holger80.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind database_api.list_votes holger80
 
   marks:
-    - patterntest
+    - fullsynctest
 
   includes:
     - !include ../../common.yaml
