--- a/hivemind/tavern_full_sync/tags_api_patterns/get_discussion/vaneaventuras.tavern.yaml
+++ b/hivemind/tavern_full_sync/tags_api_patterns/get_discussion/vaneaventuras.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind tags_api.get_discussion vaneaventuras
 
   marks:
-    - patterntest
+    - fullsynctest
 
   includes:
     - !include ../../common.yaml
