--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_ranked_posts/trending/max_limit.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_ranked_posts/trending/max_limit.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind bridge_api.get_ranked_posts trending maximum limit
+  test_name: Hivemind bridge_api.get_ranked_posts trending maximum limit patterns test
 
   marks:
     - fullsynctest
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_ranked_posts"
-          params: {"sort":"trending","tag":"development","observer":"alice", "limit": 100}
+          params: {"sort":"trending","tag":"","observer":"alice", "limit": 100}
       response:
         status_code: 200
         verify_response_with:
