--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_author_before_date/kstop1.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_author_before_date/kstop1.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_author_before_date kstop1
 
   marks:
-    - patterntest
+    - fullsynctest
 
   includes:
     - !include ../../common.yaml
