--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_blog/tag_paragism.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_blog/tag_paragism.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_blog tag_paragism
 
   marks:
-    - patterntest
+    - fullsynctest
 
   includes:
     - !include ../../common.yaml
