--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_feed/joetunex.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_discussions_by_feed/joetunex.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_feed patterns test
 
   marks:
-    - patterntest # tag is not a tag but account whose feed we are looking at (set of posts created/reblogged by those followed by selected account)
+    - fullsynctest # tag is not a tag but account whose feed we are looking at (set of posts created/reblogged by those followed by selected account)
                   # there can be no nonempty results for not-up-to-date HM because it only gives posts that were created/reblogged within last month (no param to change it)
     - xfail # This test is dedicated for HEAD-hivemind
 
@@ -24,7 +24,7 @@
       response:
         status_code: 200
         verify_response_with:
-          function: validate_response:compare_response_with_pattern
+          function: validate_response:has_valid_response
           extra_kwargs:
             method: "joetunex"
             directory: "condenser_api_patterns/get_discussions_by_feed"
