--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_followers/haejin_edenmichelle.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_followers/haejin_edenmichelle.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_followers haejin_edenmichelle
 
   marks:
-    - patterntest
+    - fullsynctest
 
   includes:
     - !include ../../common.yaml
