--- a/hivemind/tavern_full_sync/condenser_api_patterns/get_reblogged_by/woelfchen.tavern.yaml
+++ b/hivemind/tavern_full_sync/condenser_api_patterns/get_reblogged_by/woelfchen.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_reblogged_by woelfchen
 
   marks:
-    - patterntest
+    - fullsynctest
 
   includes:
     - !include ../../common.yaml
