[ABW]: test patterns changed due to change in paging (no overlap) one test became negative due to change in check (previously only permlink was checked) some tests changed to accomodate mock reblogs

--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_blog/large002.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_blog/large002.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_blog patterns test - tag with large number of entries not empty start author/permlink
 
   marks:
-    - patterntest
+    - patterntest # old HM produced overlapping pages - that was corrected
 
   includes:
     - !include ../../common.yaml
