--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/blog/nkdk.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/blog/nkdk.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind bridge_api.get_account_posts
 
   marks:
-    - patterntest
+    - patterntest # old HM produced ovrlapping pages, this was corrected
 
   includes:
     - !include ../../../common.yaml
