--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_blog/steemit.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_blog/steemit.tavern.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_discussions_by_blog"
-          params: {"tag":"steemit","start_author":"steemit","start_permlink":"firstpost","limit":1}
+          params: {"tag":"steemit","start_author":"","start_permlink":"","limit":1}
       response:
         status_code: 200
         verify_response_with:
