[ABW]: added .orig files to new tests fixed failing tag for negative in new negative tests fixed (removed) comments on differences that were corrected one test manually turned into xfail due to spotted problem with reply/reply_comment notifications

--- a/hivemind/tavern/bridge_api_negative/account_notifications/under_score.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/account_notifications/under_score.tavern.yaml
@@ -2,8 +2,8 @@
   test_name: Hivemind bridge_api.account_notifications under score patterns test
 
   marks:
-    - patterntest
-    - failing
+    - patterntest # original did not validate score properly
+    - negative
 
   includes:
     - !include ../../common.yaml
