--- a/hivemind/tavern/bridge_api_patterns/account_notifications/min_limit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/account_notifications/min_limit.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind bridge_api.account_notifications min limit patterns test
 
   marks:
-    - patterntest
+    - patterntest # changed due to mock data
 
   includes:
     - !include ../../common.yaml
