--- a/hivemind/tavern/bridge_api_negative/account_notifications/over_score.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/account_notifications/over_score.tavern.yaml
@@ -2,8 +2,8 @@
   test_name: Hivemind bridge_api.account_notifications over score patterns test
 
   marks:
-    - patterntest
-    - failing
+    - patterntest # original did not validate score properly
+    - negative
 
   includes:
     - !include ../../common.yaml
