--- a/hivemind/tavern/bridge_api_patterns/account_notifications/min_score.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/account_notifications/min_score.tavern.yaml
@@ -3,6 +3,8 @@
 
   marks:
     - patterntest
+    - failing
+    - xfail # reply/reply_comment should point to the reply, not to post being replied to
 
   includes:
     - !include ../../common.yaml
