--- a/hived/tavern/condenser_api_negative/verify_account_authority/gtg.tavern.yaml
+++ b/hived/tavern/condenser_api_negative/verify_account_authority/gtg.tavern.yaml
@@ -27,4 +27,4 @@
             method: "gtg"
             directory: "condenser_api_negative/verify_account_authority"
             error_response: true
-            ignore_tags: ['context']
+            ignore_tags: ['stack']
