Use parallel instead xdist.

--- a/hived/tavern_run/tox.ini
+++ b/hived/tavern_run/tox.ini
@@ -16,7 +16,7 @@ deps =
   pytest-pylint
   pytest-asyncio
   pytest-console-scripts
-  pytest-xdist
+  pytest-parallel
   git-pylint-commit-hook
   pep8
   yapf
