--- a/hivemind/tavern/bridge_api_negative/list_subscribers/community_not_found.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/list_subscribers/community_not_found.tavern.yaml
@@ -2,9 +2,8 @@
   test_name: bridge_api.list_subscribers community not found
 
   marks:
-    - patterntest
+    - patterntest # original did not validate community
     - negative
-    - xfail # is there should be an error that community not exists?
 
   includes:
     - !include ../../common.yaml
